# stock-time-series

./: .env.example  .gitignore  LICENSE  README.md  com.stock-timeseries.plist  pyproject.toml  requirement.md  requirements-heavy.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: auto_merge.yml  ci.yml  data_refresh.yml  model_retrain.yml  pages.yml
docs/: index.html
docs/data/: arima_metrics.csv  arima_predictions.csv  facebook_prophet_predictions.csv  gru_metrics.csv  gru_predictions.csv  linear_regression_metrics.csv  linear_regression_predictions.csv  lstm_metrics.csv  lstm_predictions.csv  manifest.json  svr_metrics.csv  svr_predictions.csv  transformer_metrics.csv  transformer_predictions.csv
knowledge/: 01_data_ohlcv.md  02_indicators.md  03_split.md  04_metrics.md  05_eda.md  06_evaluation.md  07_models.md  08_vn_market.md  09_pitfalls.md  README.md
notebooks/: 00_template.ipynb  01_linear_regression.ipynb  02_eda.ipynb  03_lstm_gru.ipynb  04_ARIMA.ipynb  05_SVR.ipynb  07_facebook_prophet.ipynb  08_transformer.ipynb
results/: registry.json
results/arima/: arima_results.csv
results/comparison/: chapter5_best_models.csv  chapter5_comparison.csv  chapter5_pivot_mae_70_30.csv  chapter5_pivot_mae_80_20.csv  chapter5_pivot_rmse_70_30.csv  chapter5_pivot_rmse_80_20.csv  chapter5_walkforward_per_fold.csv  chapter5_walkforward_summary.csv
results/eda/: chapter3_summary.csv
results/facebook_prophet/: facebook_prophet_results.csv
results/gru/: gru_results.csv
scripts/: aggregate_results.py  run_pipeline.py  walkforward_eval.py
src/: clean.py  collect.py  features.py  metrics.py  preprocess.py  sheets.py  split.py  upload.py  validate.py
(+5 files in other folders)
