[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "stock-time-series"
version = "0.1.0"
description = "Vietnamese stock time series forecasting — data pipeline (Member 1)"
requires-python = ">=3.11"
dependencies = [
    "vnstock>=3.0.0",
    "yfinance>=0.2.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "ta>=0.11.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["jupyter", "matplotlib", "seaborn"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
