[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "stock-time-series"
version = "0.1.0"
description = "Vietnamese stock time series forecasting — data pipeline (Member 1)"
requires-python = ">=3.11"
dependencies = [
    "vnstock>=3.0.0",
    "yfinance>=0.2.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "ta>=0.11.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "scikit-learn>=1.4.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "statsmodels>=0.14.0",
    "jupyter>=1.0.0",
    "nbconvert>=7.0.0",
    "nbformat>=5.0.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",   # line too long — không enforce trong data science code
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E402"]   # module-level import not at top (sys.path insert)
